# ChangeLog for sci-electronics/spice
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-electronics/spice/ChangeLog,v 1.11 2009/06/07 05:43:47 calchan Exp $

*spice-3.5.5-r1 (07 Jun 2009)

  07 Jun 2009; Denis Dupeyron <calchan@gentoo.org> +spice-3.5.5-r1.ebuild:
  Fixed pre-stripped files and LDFLAGS, bug #252038. Straight to stable for
  those arches where it is stable because it is such a minor change.

  18 Apr 2007; Christian Faulhammer <opfer@gentoo.org> spice-3.5.5.ebuild:
  stable amd64, bug 174791

  18 Apr 2007; Christian Faulhammer <opfer@gentoo.org> spice-3.5.5.ebuild:
  fix multilib handling, see bug 171330

  12 Mar 2007; Denis Dupeyron <calchan@gentoo.org> spice-3.5.5.ebuild:
  Fixed bug #166897, thanks David Watzke. Fixed mtime issue forcing WORKDIR to
  be recreated each time.

  21 Feb 2007; Denis Dupeyron <calchan@gentoo.org> files/digest-spice-3.5.5,
  Manifest:
  Transition to Manifest2.

  02 Jul 2006; Denis Dupeyron <calchan@gentoo.org> metadata.xml:
  Adjusted metadata, see bug #138062.

  21 May 2006; Denis Dupeyron <calchan@gentoo.org> spice-3.5.5.ebuild:
  Replace -O* flags with -O1, bug #84034.

  21 May 2006; Denis Dupeyron <calchan@gentoo.org>
  +files/spice-3.5.5-gcc-4.1.patch, metadata.xml, spice-3.5.5.ebuild:
  Fix for gcc 4.1, closing bug #131048.

  22 Jan 2006; Markus Dittrich <markusle@gentoo.org> spice-3.5.5.ebuild:
  Fixed dependencies for modular X.

*spice-3.5.5 (27 Dec 2004)

  27 Dec 2004; Olivier Fisette <ribosome@gentoo.org> +metadata.xml,
  +spice-3.5.5.ebuild:
  Moved from app-sci/spice to sci-electronics/spice.

  23 Oct 2004; Simon Stelling <blubb@gentoo.org> spice-3.5.5.ebuild:
  added ~amd64

  21 Aug 2004; David Holm <dholm@gentoo.org> spice-3.5.5.ebuild:
  Added to ~ppc.

  30 Mar 2004; Donnie Berkholz <spyderous@gentoo.org>; spice-3.5.5.ebuild:
  Change x11-base/xfree dependency to virtual/x11.
