@@ -1,6 +1,6 @@
 AUX spice-3.5.5-gcc-4.1.patch 2511 RMD160 5e55a8939ec825a3867be593a99d211c9d1e3c1b SHA1 9843081300f200559226cbe645d9cc94234ee358 SHA256 8b1b0ee2a28c995e5a71ac313cef18ed0baa01a313949b9586ce56377ef35ec3
 DIST spice3f5sfix.tar.gz 1377263 RMD160 dc3b02b9b9783c7b08fd6cdb1fbe3355c5739e49 SHA1 1e2e6d3c28cd28e9fad2479610fc43146f5ca755 SHA256 8df74cc3d12f0e2c32c8455008ae4bf837e736edec9cedbc68c86b72e20abf5d
-EBUILD spice-3.5.5-r1.ebuild 1707 RMD160 3c0dc5663ac40f38c7a8553bfdbc70feecf320a2 SHA1 1f137ca4fe700339a1de41053585aa01039a6cd5 SHA256 9e065fa8a313d34faa10bf0f9bcef7611371d66c508ece5a36143c9fcb658f4d
+EBUILD spice-3.5.5-r1.ebuild 1787 RMD160 35e280786c9bdbb589e78a8907fbe6a4d0ccde5c SHA1 a4d6e29ed6c14a0e9fe1f50233fda48dc630b3e1 SHA256 c86814d1b5399c5d33f8be5bd81c1ef03e4b2c7c79918df1950235e33d15f78b
 EBUILD spice-3.5.5.ebuild 1659 RMD160 0abd815867df4ee059ce52c70861659b3dfa82b0 SHA1 75ce0ede2244f00db588783ca0cb9e6a354c6571 SHA256 d17a9454ac6e66eb21260f80b678d8d6e5a9917b48da0f50f782feb7a52f59ac
-MISC ChangeLog 2863 RMD160 736f1ed508d3a877a09117a7e021bd0536313594 SHA1 7875840cc0e921c3ccdb9687ec215016463e4adc SHA256 6357bc75684e81ade4ff430875b018e1a1502d766d93130f1dc927c9bbcd9fb8
+MISC ChangeLog 2981 RMD160 be7c9e23a7112427b7dcf6b7b32f51f511166c94 SHA1 25553a4d1d505134e6ef077e933248e4de9f65e2 SHA256 73bb7a256c2db38183571cc8067f26463f90ca54076d81d0a74197e7adbe6177
 MISC metadata.xml 690 RMD160 9e8afed9996cc2c11388638bd0129b2ea50062f1 SHA1 0f98743fa250170c25ed97309f0a1c39d0624f8d SHA256 8b9ef70c8bfc12f9b87bca110e52da6e9e4cab3436fdb5552e152fc9da5fe8f3
