@@ -1,6 +1,6 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-electronics/spice/spice-3.5.5-r1.ebuild,v 1.1 2009/06/07 05:43:47 calchan Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-electronics/spice/spice-3.5.5-r1.ebuild,v 1.2 2010/07/04 06:32:18 tomjbe Exp $
 
 inherit eutils flag-o-matic multilib
 
@@ -16,7 +16,8 @@ SLOT="0"
 KEYWORDS="amd64 ~ppc x86"
 
 RDEPEND="sys-libs/ncurses
-	x11-libs/libXaw"
+	x11-libs/libXaw
+	app-editors/gentoo-editor"
 
 DEPEND="${RDEPEND}
 	x11-proto/xproto"
@@ -32,9 +33,8 @@ src_unpack() {
 	# Avoid re-creating WORKDIR due to stupid mtime
 	touch ..
 
-	[ -z $EDITOR ] || EDITOR="vim"
 	sed -i -e "s:termcap:ncurses:g" \
-		-e "s:joe:${EDITOR}:g" \
+		-e "s:joe:/usr/libexec/gentoo-editor:g" \
 		-e "s:-O2 -s:${CFLAGS}:g" \
 		-e "s:-lncurses -lm -s:-lncurses -lm ${LDFLAGS}:" \
 		-e "s:SPICE_DIR)/lib:SPICE_DIR)/$(get_libdir)/spice:g" \
@@ -53,13 +53,13 @@ src_compile() {
 src_install() {
 	# install binaries
 	dobin obj/bin/{spice3,nutmeg,sconvert,multidec,proc2mod} || die "failed to copy binaries"
-	newbin obj/bin/help spice.help
-	dosym /usr/bin/spice3 /usr/bin/spice
+	newbin obj/bin/help spice.help || die
+	dosym /usr/bin/spice3 /usr/bin/spice || die
 	# install runtime stuff
 	rm -f lib/make*
-	dodir /usr/$(get_libdir)/spice
-	cp -R lib/* "${D}"/usr/$(get_libdir)/spice/
+	dodir /usr/$(get_libdir)/spice || die
+	cp -R lib/* "${D}"/usr/$(get_libdir)/spice/ || die "failed to copy libraries"
 	# install docs
-	doman man/man1/*.1
-	dodoc readme readme.Linux notes/spice2
+	doman man/man1/*.1 || die
+	dodoc readme readme.Linux notes/spice2 || die
 }
